--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,12 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <!-- Text sizes. -->
+    <dimen name="text_size_small">18sp</dimen>
+    <dimen name="text_size_normal">22sp</dimen>
+
+    <!-- View heights -->
+    <dimen name="view_height">70dp</dimen>
+
 </resources>
