--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <fmuntenescu.vectordrawables.MeasurableImageView
+    <fmuntenescu.vectordrawablevspng.MeasurableImageView
         android:id="@+id/measurable_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
